implement agent rule sync; add all_user_stats cortex admin endpoint; various bugfixes

--- a/deploy/charts/opni-monitoring-agent/templates/rbac.yaml
+++ b/deploy/charts/opni-monitoring-agent/templates/rbac.yaml
@@ -23,6 +23,16 @@ rules:
       - namespaces
     verbs:
       - get
+      - list
+      - watch
+  - apiGroups:
+      - "monitoring.coreos.com"
+    resources:
+      - prometheusrules
+    verbs:
+      - get
+      - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
