--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -27,7 +27,7 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 - patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
-- patches/webhook_in_logadapters.yaml
+# - patches/webhook_in_logadapters.yaml
 #- patches/webhook_in_pretrainedmodels.yaml
 #- patches/webhook_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
@@ -36,7 +36,7 @@ patchesStrategicMerge:
 # patches here are for enabling the CA injection for each CRD
 - patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
-- patches/cainjection_in_logadapters.yaml
+# - patches/cainjection_in_logadapters.yaml
 #- patches/cainjection_in_pretrainedmodels.yaml
 #- patches/cainjection_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
