--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -18482,20 +18482,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
     controller-gen.kubebuilder.io/version: v0.5.0
+  creationTimestamp: null
   name: logadapters.opni.io
 spec:
-  conversion:
-    strategy: Webhook
-    webhook:
-      clientConfig:
-        service:
-          name: opni-webhook-service
-          namespace: opni-system
-          path: /convert
-      conversionReviewVersions:
-      - v1
   group: opni.io
   names:
     kind: LogAdapter
@@ -35291,7 +35281,8 @@ spec:
           namespace: opni-system
           path: /convert
       conversionReviewVersions:
-      - v1
+      - v1beta1
+      - v1beta2
   group: opni.io
   names:
     kind: OpniCluster
@@ -50869,27 +50860,7 @@ webhooks:
 - admissionReviewVersions:
   - v1
   - v1beta1
-  clientConfig:
-    service:
-      name: opni-webhook-service
-      namespace: opni-system
-      path: /validate-opni-io-v1beta1-logadapter
-  failurePolicy: Fail
-  name: vlogadapter.kb.io
-  rules:
-  - apiGroups:
-    - opni.io
-    apiVersions:
-    - v1beta1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - logadapters
-  sideEffects: None
-- admissionReviewVersions:
-  - v1
-  - v1beta1
+  - v1beta2
   clientConfig:
     service:
       name: opni-webhook-service
@@ -50907,4 +50878,25 @@ webhooks:
     - UPDATE
     resources:
     - opniclusters
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: opni-webhook-service
+      namespace: opni-system
+      path: /validate-opni-io-v1beta1-logadapter
+  failurePolicy: Fail
+  name: vlogadapter.kb.io
+  rules:
+  - apiGroups:
+    - opni.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - logadapters
   sideEffects: None
