--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -40,6 +40,7 @@ ingester_client:
   grpc_client_config: *tls_client_config
 
 ruler:
+  enable_alertmanager_v2: true
   ruler_client: *tls_client_config
   enable_api: true
   enable_sharding: false
