--- a/pkg/test/testdata/prometheus/config.yaml
+++ b/pkg/test/testdata/prometheus/config.yaml
@@ -19,4 +19,4 @@ scrape_configs:
 # When running prometheus in Agent mode, remote-write is required.
 remote_write:
   # Agent is able to run with a invalid remote-write URL, but, of course, will fail to push timeseries.
-  - url: "http://localhost:{{ .OpniAgentPort }}"
+  - url: "http://localhost:{{ .OpniAgentPort }}/api/agent/push"
