--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -27,18 +27,18 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 - patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
-# - patches/webhook_in_logadapters.yaml
-#- patches/webhook_in_pretrainedmodels.yaml
-#- patches/webhook_in_gpupolicyadapters.yaml
+- patches/webhook_in_logadapters.yaml
+- patches/webhook_in_pretrainedmodels.yaml
+- patches/webhook_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 - patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
-# - patches/cainjection_in_logadapters.yaml
-#- patches/cainjection_in_pretrainedmodels.yaml
-#- patches/cainjection_in_gpupolicyadapters.yaml
+- patches/cainjection_in_logadapters.yaml
+- patches/cainjection_in_pretrainedmodels.yaml
+- patches/cainjection_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
