--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -13,6 +13,27 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-opni-io-v1beta2-logadapter
+  failurePolicy: Fail
+  name: mlogadapter.kb.io
+  rules:
+  - apiGroups:
+    - opni.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - logadapters
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-opni-io-v1beta1-logadapter
   failurePolicy: Fail
   name: mlogadapter.kb.io
@@ -35,6 +56,27 @@ metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-opni-io-v1beta2-logadapter
+  failurePolicy: Fail
+  name: vlogadapter.kb.io
+  rules:
+  - apiGroups:
+    - opni.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - logadapters
+  sideEffects: None
 - admissionReviewVersions:
   - v1
   - v1beta1
