bugfixes; gateway metrics+dashboards work in progress

--- a/deploy/values/cortex.yaml
+++ b/deploy/values/cortex.yaml
@@ -78,6 +78,8 @@ config:
     enabled: true
 alertmanager:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: &env_vars
     # - name: JAEGER_AGENT_HOST
     #   value: simplest-agent.observability.svc
@@ -164,6 +166,8 @@ alertmanager:
             path: fallback.yaml
 querier:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
@@ -172,12 +176,16 @@ querier:
   extraVolumes: *cert_volumes
 ingester:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   readinessProbe: *mtls_probe
   extraVolumeMounts: *cert_volume_mounts
   extraVolumes: *cert_volumes
 distributor:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
@@ -186,6 +194,8 @@ distributor:
   extraVolumes: *cert_volumes
 ruler:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
@@ -194,6 +204,8 @@ ruler:
   extraVolumes: *cert_volumes
 query_frontend:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
@@ -202,6 +214,8 @@ query_frontend:
   extraVolumes: *cert_volumes
 store_gateway:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
@@ -210,6 +224,8 @@ store_gateway:
   extraVolumes: *cert_volumes
 compactor:
   replicas: 3
+  serviceMonitor:
+    enabled: true
   env: *env_vars
   startupProbe: *mtls_probe
   livenessProbe: *mtls_probe
