--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -34649,7 +34649,11 @@ spec:
                 items:
                   type: string
                 type: array
+              rolename:
+                type: string
               state:
+                type: string
+              username:
                 type: string
             type: object
         type: object
