--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -2261,6 +2261,8 @@ spec:
                     type: object
                   defaultRepo:
                     type: string
+                  enableLogIndexManagement:
+                    type: boolean
                   externalOpensearch:
                     properties:
                       name:
@@ -4214,6 +4216,42 @@ spec:
                         type: object
                       prometheusEndpoint:
                         type: string
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                    type: object
+                  opensearchFetcher:
+                    properties:
+                      enabled:
+                        type: boolean
+                      image:
+                        type: string
+                      imagePullPolicy:
+                        type: string
+                      imagePullSecrets:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                          type: object
+                        type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
                       tolerations:
                         items:
                           properties:
