Add template logic for arguments in the install command template

--- a/deploy/charts/opni-monitoring-agent/values.yaml
+++ b/deploy/charts/opni-monitoring-agent/values.yaml
@@ -64,3 +64,11 @@ token: ""
 pin: ""
 # Gateway address
 address: ""
+
+kube-prometheus-stack:
+  enabled: false
+  values:
+    grafana:
+      enabled: false # disable the default Grafana deployment
+    prometheus:
+      enabled: false # disable the default Prometheus deployment
