--- a/deploy/charts/opni-monitoring-agent/Chart.yaml
+++ b/deploy/charts/opni-monitoring-agent/Chart.yaml
@@ -4,4 +4,8 @@ description: Opni Monitoring Agent
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
-dependencies: []
+dependencies:
+  - name: kube-prometheus-stack
+    version: "34.1.1"
+    repository: "https://prometheus-community.github.io/helm-charts"
+    condition: "kube-prometheus-stack.enabled"
