remove kube-prometheus requirements, update dns/hostname docs

--- a/deploy/custom/opni-monitoring-template.yaml
+++ b/deploy/custom/opni-monitoring-template.yaml
@@ -5,4 +5,5 @@ auth:
   openid:
     issuer: "" # OpenID issuer URL (as shown in /.well-known/openid-configuration)
 gateway:
+  hostname: ""
   dnsNames: []
