Helm chart bugfixes

--- a/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
@@ -16,6 +16,7 @@ data:
           - {{ $d }}
         {{- end }}
       listenAddress: ":{{ .Values.services.public.port }}"
+      hostname: "{{ .Values.gateway.hostname }}"
       management:
         grpcListenAddress: "{{ .Values.management.grpcListenAddress }}"
         httpListenAddress: "{{ .Values.management.httpListenAddress }}"
