disable agent alertmanager when bundling kube-prometheus-stack

--- a/deploy/charts/opni-monitoring-agent/values.yaml
+++ b/deploy/charts/opni-monitoring-agent/values.yaml
@@ -71,3 +71,5 @@ kube-prometheus-stack:
     enabled: false # disable the default Grafana deployment
   prometheus:
     enabled: false # disable the default Prometheus deployment
+  alertmanager:
+    enabled: false # disable the default Alertmanager deployment
