--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - docs
   workflow_dispatch: {}
 jobs:
   deploy:
@@ -37,7 +36,7 @@ jobs:
         working-directory: docs/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        # if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/public
