update chart versions to 0.4.0

--- a/deploy/charts/opni-monitoring-agent/values.yaml
+++ b/deploy/charts/opni-monitoring-agent/values.yaml
@@ -5,7 +5,7 @@ fullnameOverride: ""
 image:
   repository: kralicky/opni-monitoring
   # Overrides the image tag whose default is the chart appVersion.
-  tag: main
+  tag: latest
   pullPolicy: Always
 
 serviceAccount:
