--- a/deploy/charts/opni-monitoring/values.yaml
+++ b/deploy/charts/opni-monitoring/values.yaml
@@ -4,7 +4,7 @@ fullnameOverride: ""
 
 image:
   repository: kralicky/opni-monitoring # Overrides the image tag whose default is the chart appVersion.
-  tag: main
+  tag: latest
   pullPolicy: Always
 
 auth:
