Update opensearch operator

--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -43299,11 +43299,17 @@ spec:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 properties:
+                  additionalConfig:
+                    additionalProperties:
+                      type: string
+                    description: Extra items to add to the opensearch.yml
+                    type: object
                   defaultRepo:
                     type: string
-                  extraConfig:
-                    description: Extra items to add to the opensearch.yml
-                    type: string
+                  drainDataNodes:
+                    description: Drain data nodes controls whether to drain data notes
+                      on rolling restart operations
+                    type: boolean
                   httpPort:
                     default: 9200
                     format: int32
@@ -43347,6 +43353,10 @@ spec:
               nodePools:
                 items:
                   properties:
+                    additionalConfig:
+                      additionalProperties:
+                        type: string
+                      type: object
                     affinity:
                       description: Affinity is a group of affinity scheduling rules.
                       properties:
@@ -44228,8 +44238,7 @@ spec:
                     component:
                       type: string
                     diskSize:
-                      format: int32
-                      type: integer
+                      type: string
                     jvm:
                       type: string
                     nodeSelector:
@@ -44494,11 +44503,6 @@ spec:
                             type: object
                         type: object
                     type: object
-                type: object
-              upgradeOptions:
-                properties:
-                  drainDataNodes:
-                    type: boolean
                 type: object
             required:
             - nodePools
