--- a/deploy/manifests/00_crds.yaml
+++ b/deploy/manifests/00_crds.yaml
@@ -57486,11 +57486,17 @@ spec:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 properties:
+                  additionalConfig:
+                    additionalProperties:
+                      type: string
+                    description: Extra items to add to the opensearch.yml
+                    type: object
                   defaultRepo:
                     type: string
-                  extraConfig:
-                    description: Extra items to add to the opensearch.yml
-                    type: string
+                  drainDataNodes:
+                    description: Drain data nodes controls whether to drain data notes
+                      on rolling restart operations
+                    type: boolean
                   httpPort:
                     default: 9200
                     format: int32
@@ -57534,6 +57540,10 @@ spec:
               nodePools:
                 items:
                   properties:
+                    additionalConfig:
+                      additionalProperties:
+                        type: string
+                      type: object
                     affinity:
                       description: Affinity is a group of affinity scheduling rules.
                       properties:
@@ -58415,8 +58425,7 @@ spec:
                     component:
                       type: string
                     diskSize:
-                      format: int32
-                      type: integer
+                      type: string
                     jvm:
                       type: string
                     nodeSelector:
@@ -58681,11 +58690,6 @@ spec:
                             type: object
                         type: object
                     type: object
-                type: object
-              upgradeOptions:
-                properties:
-                  drainDataNodes:
-                    type: boolean
                 type: object
             required:
             - nodePools
