--- a/deploy/charts/opni-monitoring-agent/templates/agent-config.yaml
+++ b/deploy/charts/opni-monitoring-agent/templates/agent-config.yaml
@@ -17,7 +17,7 @@ stringData:
         discovery:
           prometheusRules: {}
       storage:
-        type: secret
+        type: customResources
       bootstrap:
         token: {{ .Values.token }}
         pins: [{{ .Values.pin }}]
